# code-crew

./: .config.example.yaml  .env.example  .gitignore  .gitmodules  .mcp.example.yaml  CLA.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTORS  README.md  pyproject.toml
code_crew/: chat_agent.py  crew.py  flow.py  main.py  repl.py  startup.py  ui.py  worktree.py
code_crew/crews/: __init__.py  core.py  design.py  domain.py  drift.py  explore.py  sprint.py  threat.py  ux.py  verify.py
code_crew/knowledge/: index.md
docs/: code-crew.md  comparison-gstack.md  decision-openclaude.md  plan-roadmap.md  scan-design.md
docs/add/: ADD-001-Virtual-AI-Development-Team.md  ADD-002-Init-Explore-Verify.md  ADD-003-Monetization-Licensing.md  ADD-004-Startup-Checks-And-Fix-Command.md  ADD-005-Ticket-And-Sprint-Flow.md  ADD-006-OKF-Knowledge-Architecture.md  ADD-007-Server-Mode-IM-Adapters.md  ADD-008-Incremental-Per-Unit-LLM-Decomposition.md  ADD-009-Parallel-Crew-Execution.md  ADD-010-Guardrails-Destructive-Operations.md  ADD-011-Multi-Pass-Threat-Model-Refinement.md  ADD-012-Explore-Decomposition-Synthesis.md  ADD-013-Explore-Command-Design.md  ADD-014-Threat-Command-Design.md
docs/adr/: ADR-001-CrewAI-Multi-Agent-Architecture.md  ADR-002-Fullstack-Engineer-Agent.md  ADR-003-Async-Wait-Points.md  ADR-004-Open-Core-Licensing.md  ADR-005-Langfuse-Observability.md  ADR-006-Manager-Worker-Execution-Model.md  ADR-007-Python-Flow-Orchestration.md  ADR-008-Server-Mode-IM-Adapters.md  ADR-009-Parallel-Per-Unit-Agent-Execution.md
docs/eval/: EVAL-001-gstack.md  EVAL-002-openclaude.md  EVAL-003-threat-dragon-ai-tool.md
docs/plan/: PLAN-001-Roadmap.md
docs/sad/: SAD-001-code-crew.md
ops/: crew.py  main.py
ops/knowledge/: index.md
scripts/: convert_designs_to_okf.py
shared/: __init__.py  aws_auth.py  bedrock.py  config.py  home.py  human_relay.py  issue_tracker.py  jira_client.py  llm_factory.py  log.py  mcp_registry.py  okf_loader.py  progress_guard.py  pt_console.py  session.py  sprint_planner.py  telemetry.py  threat_model_export.py  user_memory.py
tests/: conftest.py  test_aws_auth.py  test_bedrock_tiers.py  test_flow.py  test_issue_tracker.py  test_profiles.py  test_pt_console.py  test_startup.py  test_workspace_reader.py  test_worktree.py
web/: package-lock.json
(+198 files in other folders)
