[project]
name = "ai-dev-team"
version = "0.2.0"
description = "Virtual AI development team — CrewAI + Amazon Bedrock"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "boto3>=1.35.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",
    "aiobotocore>=2.13.0",
    "langfuse>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
groq = ["groq>=0.5.0"]
ollama = ["ollama>=0.2.0"]
all-providers = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "groq>=0.5.0",
    "ollama>=0.2.0",
]

[project.scripts]
code-crew = "code_crew.repl:main"
code-crew-cli = "code_crew.main:cli"
ops-crew = "ops.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_crew", "ops", "shared"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
